--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
@@ -14,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <ImageButton
+    <com.synngate.expertcourselemonade.views.imagebutton.PictureButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gameImageButton"
@@ -27,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="16dp"/>
 
-    <TextView
+    <com.synngate.expertcourselemonade.views.text.InstructionText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
