fragments and navigation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rootLayout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <com.synngate.expertcourselemonade.views.imagebutton.PictureButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gameImageButton"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:textAlignment="center"
-        android:src="@drawable/lemon"
-        android:contentDescription="@string/app_name"/>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="16dp"/>
-
-    <com.synngate.expertcourselemonade.views.text.InstructionText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:text="@string/lemon"
-        android:id="@+id/instructionTextView"
-        tools:text="@string/lemon"/>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-</LinearLayout>
+    android:layout_margin="16dp"/>
